Add links to relevant documentation

--- a/dummy_architecture/libraries/DummyLibrary/library.properties
+++ b/dummy_architecture/libraries/DummyLibrary/library.properties
@@ -1,3 +1,5 @@
+# See: https://arduino.github.io/arduino-cli/dev/library-specification/#library-metadata
+
 name=DummyLibrary
 version=0.0.0
 author=
