--- a/dummy_architecture/libraries/DummyPrecompiledLibrary/library.properties
+++ b/dummy_architecture/libraries/DummyPrecompiledLibrary/library.properties
@@ -1,3 +1,5 @@
+# See: https://arduino.github.io/arduino-cli/dev/library-specification/#library-metadata
+
 name=DummyPrecompiledLibrary
 version=0.0.0
 author=
